--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1247,6 +1247,9 @@ set(WINDOWS_PLUGIN_FILES
         src/collectors/windows.plugin/GetSystemTimes.c
         src/collectors/windows.plugin/GlobalMemoryStatusEx.c
         src/collectors/windows.plugin/GetTickCount64.c
+        src/collectors/windows.plugin/perflib.c
+        src/collectors/windows.plugin/perflib.h
+        src/collectors/windows.plugin/perflib-names.c
 )
 
 set(PROC_PLUGIN_FILES
