improvements to the library; disks module WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1256,6 +1256,7 @@ set(WINDOWS_PLUGIN_FILES
         src/collectors/windows.plugin/perflib.h
         src/collectors/windows.plugin/perflib-names.c
         src/collectors/windows.plugin/perflib-dump.c
+        src/collectors/windows.plugin/PerflibDisks.c
 )
 
 set(PROC_PLUGIN_FILES
