added windows protocols

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1256,7 +1256,8 @@ set(WINDOWS_PLUGIN_FILES
         src/collectors/windows.plugin/perflib.h
         src/collectors/windows.plugin/perflib-names.c
         src/collectors/windows.plugin/perflib-dump.c
-        src/collectors/windows.plugin/PerflibDisks.c
+        src/collectors/windows.plugin/perflib-storage.c
+        src/collectors/windows.plugin/perflib-network.c
 )
 
 set(PROC_PLUGIN_FILES
