tinysleep for native smallest sleep support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -731,6 +731,8 @@ set(LIBNETDATA_FILES
         src/libnetdata/os/os-macos-wrappers.h
         src/libnetdata/os/get_system_cpus.c
         src/libnetdata/os/get_system_cpus.h
+        src/libnetdata/os/tinysleep.c
+        src/libnetdata/os/tinysleep.h
 )
 
 if(ENABLE_PLUGIN_EBPF)
@@ -1586,7 +1588,7 @@ target_include_directories(libnetdata BEFORE PUBLIC ${CONFIG_H_DIR} ${CMAKE_SOUR
 target_link_libraries(libnetdata PUBLIC
         "$<$<NOT:$<BOOL:${HAVE_BUILTIN_ATOMICS}>>:atomic>"
         "$<$<OR:$<BOOL:${LINUX}>,$<BOOL:${FREEBSD}>>:pthread;rt>"
-        "$<$<BOOL:${WINDOWS}>:kernel32;advapi32>"
+        "$<$<BOOL:${WINDOWS}>:kernel32;advapi32;winmm>"
         "$<$<BOOL:${LINK_LIBM}>:m>"
         "${SYSTEMD_LDFLAGS}")
 
