--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1265,6 +1265,7 @@ set(WINDOWS_PLUGIN_FILES
         src/collectors/windows.plugin/perflib-dump.c
         src/collectors/windows.plugin/perflib-storage.c
         src/collectors/windows.plugin/perflib-network.c
+        src/collectors/windows.plugin/perflib-processor.c
 )
 
 set(PROC_PLUGIN_FILES
