--- a/integrations/cloud-notifications/metadata.yaml
+++ b/integrations/cloud-notifications/metadata.yaml
@@ -92,7 +92,7 @@
       ### Prerequisites
       - A Netdata Cloud account
       - Access to the Netdata Space as an **administrator**
-      - The Netdata Space needs to be on **Business** plan or higher
+      - The Netdata Space needs to be on a paid plan
       - You need to have a PagerDuty service to receive events using webhooks.
 
 
@@ -136,7 +136,7 @@
 
       - A Netdata Cloud account
       - Access to the Netdata Space as an **administrator**
-      - The Netdata Space needs to be on **Business** plan or higher
+      - The Netdata Space needs to be on a paid plan
       - You need to have a Slack app on your workspace to receive the Webhooks.
 
       ### Slack Server Configuration
@@ -186,7 +186,7 @@
 
       - A Netdata Cloud account
       - Access to the Netdata Space as an **administrator**
-      - The Netdata Space needs to be on **Business** plan or higher
+      - The Netdata Space needs to be on a paid plan
       - You need to have permissions on Opsgenie to add new integrations.
 
       ### Opsgenie Server Configuration
@@ -229,7 +229,7 @@
 
       - A Netdata Cloud account
       - Access to the Netdata Space as an **administrator**
-      - The Netdata Space needs to be on **Business** plan or higher
+      - The Netdata Space needs to be on a paid plan
       - You need to have permissions on Mattermost to add new integrations.
       - You need to have a Mattermost app on your workspace to receive the webhooks.
 
@@ -280,7 +280,7 @@
 
       - A Netdata Cloud account
       - Access to the Netdata Space as an **administrator**
-      - The Netdata Space needs to be on **Business** plan or higher
+      - The Netdata Space needs to be on a paid plan
       - You need to have permissions on Mattermost to add new integrations.
       - You need to have a RocketChat app on your workspace to receive the webhooks.
 
@@ -552,7 +552,7 @@
 
       - A Netdata Cloud account
       - Access to the Netdata Space as an **administrator**
-      - The Netdata Space needs to be on **Pro** plan or higher
+      - The Netdata Space needs to be on a paid plan
       - You need to have an app that allows you to receive webhooks following a predefined schema.
 
       ### Netdata Configuration Steps
