--- a/integrations/cloud-authentication/metadata.yaml
+++ b/integrations/cloud-authentication/metadata.yaml
@@ -20,7 +20,7 @@
       - An Okta account
       - A Netdata Cloud account
       - Access to the Space as an administrator
-      - Space needs to be on the Business plan or higher
+      - Space needs to be on a paid plan
 
       ### Setting up Okta
       Steps needed to be done on Okta Admin Portal:
@@ -67,7 +67,7 @@
       - Authorization Server with OIDC protocol supported
       - A Netdata Cloud account
       - Access to the Space as an administrator
-      - Space needs to be on the Business plan or higher
+      - Space needs to be on a paid plan
 
       ### Setting up Authorization Server
       Your server should follow the [full specification for OIDC](https://openid.net/specs/openid-connect-core-1_0.html).
