--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1017,8 +1017,9 @@ endif()
 
 set(INTERNAL_COLLECTORS_FILES
         src/collectors/common-contexts/common-contexts.h
-        src/collectors/common-contexts/mem.swap.h
         src/collectors/common-contexts/system.ram.h
+        src/collectors/common-contexts/mem.swap.h
+        src/collectors/common-contexts/mem.pgfaults.h
 )
 
 set(PLUGINSD_PLUGIN_FILES
@@ -1273,8 +1274,9 @@ set(WINDOWS_PLUGIN_FILES
         src/collectors/windows.plugin/perflib-names.c
         src/collectors/windows.plugin/perflib-dump.c
         src/collectors/windows.plugin/perflib-storage.c
-        src/collectors/windows.plugin/perflib-network.c
         src/collectors/windows.plugin/perflib-processor.c
+        src/collectors/windows.plugin/perflib-network.c
+        src/collectors/windows.plugin/perflib-memory.c
 )
 
 set(PROC_PLUGIN_FILES
