--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -999,6 +999,7 @@ set(INTERNAL_COLLECTORS_FILES
         src/collectors/common-contexts/system.ram.h
         src/collectors/common-contexts/mem.swap.h
         src/collectors/common-contexts/mem.pgfaults.h
+        src/collectors/common-contexts/mem.available.h
 )
 
 set(PLUGINSD_PLUGIN_FILES
