--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,6 +215,8 @@ if(NEED_PROTOBUF)
         endif()
 endif()
 
+set(PKG_FILES_PATH "packaging/cmake/pkg-files")
+
 #
 # detect OS
 #
@@ -1672,7 +1674,7 @@ if(ENABLE_PLUGIN_DEBUGFS)
 
     if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-debugfs
                 DESTINATION usr/share/doc/netdata-plugin-debugfs)
     endif()
@@ -1714,7 +1716,7 @@ if(ENABLE_PLUGIN_APPS)
 
     if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-apps
                 DESTINATION usr/share/doc/netdata-plugin-apps)
     endif()
@@ -1740,7 +1742,7 @@ if(ENABLE_PLUGIN_FREEIPMI)
 
     if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-freeipmi
                 DESTINATION usr/share/doc/netdata-plugin-freeipmi)
     endif()
@@ -1766,7 +1768,7 @@ if(ENABLE_PLUGIN_NFACCT)
 
     if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-nfacct
                 DESTINATION usr/share/doc/netdata-plugin-nfacct)
     endif()
@@ -1789,7 +1791,7 @@ if(ENABLE_PLUGIN_XENSTAT)
 
     if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-xenstat
                 DESTINATION usr/share/doc/netdata-plugin-xenstat)
     endif()
@@ -1807,7 +1809,7 @@ if(ENABLE_PLUGIN_PERF)
 
     if(BUILD_FOR_PACKAGING)
          install(FILES
-                 packaging/cmake/control/copyright
+                 ${PKG_FILES_PATH}/copyright
                  COMPONENT plugin-perf
                  DESTINATION usr/share/doc/netdata-plugin-perf)
     endif()
@@ -1825,7 +1827,7 @@ if(ENABLE_PLUGIN_SLABINFO)
 
     if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-slabinfo
                 DESTINATION usr/share/doc/netdata-plugin-slabinfo)
     endif()
@@ -1865,7 +1867,7 @@ if(ENABLE_PLUGIN_LOGS_MANAGEMENT)
 
     if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-logs-management
                 DESTINATION usr/share/doc/netdata-plugin-logs-management)
     endif()
@@ -1904,7 +1906,7 @@ if(ENABLE_PLUGIN_CUPS)
 
         if(BUILD_FOR_PACKAGING)
                 install(FILES
-                        packaging/cmake/control/copyright
+                        ${PKG_FILES_PATH}/copyright
                         COMPONENT plugin-cups
                         DESTINATION usr/share/doc/netdata-plugin-cups)
         endif()
@@ -1944,7 +1946,7 @@ if(ENABLE_PLUGIN_SYSTEMD_JOURNAL)
 
         if(BUILD_FOR_PACKAGING)
                 install(FILES
-                        packaging/cmake/control/copyright
+                        ${PKG_FILES_PATH}/copyright
                         COMPONENT plugin-systemd-journal
                         DESTINATION usr/share/doc/netdata-plugin-systemd-journal)
         endif()
@@ -2033,7 +2035,7 @@ if(ENABLE_PLUGIN_EBPF)
 
     if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-ebpf
                 DESTINATION usr/share/doc/netdata-plugin-ebpf)
     endif()
@@ -2085,7 +2087,7 @@ if(ENABLE_PLUGIN_NETWORK_VIEWER)
 
         if(BUILD_FOR_PACKAGING)
                 install(FILES
-                        packaging/cmake/control/copyright
+                        ${PKG_FILES_PATH}/copyright
                         COMPONENT plugin-network-viewer
                         DESTINATION usr/share/doc/netdata-plugin-network-viewer)
         endif()
@@ -2545,16 +2547,14 @@ install(FILES
 #
 if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/netdata/etc/default/netdata
+                ${PKG_FILES_PATH}/deb/netdata/etc/default/netdata
                 COMPONENT netdata
                 DESTINATION etc/default)
-endif()
 
-if(BUILD_FOR_PACKAGING)
-install(PROGRAMS
-        packaging/cmake/control/netdata/etc/init.d/netdata
-        COMPONENT netdata
-        DESTINATION etc/init.d)
+        install(PROGRAMS
+                ${PKG_FILES_PATH}/deb/netdata/etc/init.d/netdata
+                COMPONENT netdata
+                DESTINATION etc/init.d)
 endif()
 
 install(PROGRAMS
@@ -2679,7 +2679,7 @@ install(FILES
 
 if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-chartsd
                 DESTINATION usr/share/doc/netdata-plugin-chartsd)
 endif()
@@ -2810,7 +2810,7 @@ install(FILES
 
 if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-pythond
                 DESTINATION usr/share/doc/netdata-plugin-pythond)
 endif()
@@ -2850,7 +2850,7 @@ if(ENABLE_PLUGIN_GO)
 
     if(BUILD_FOR_PACKAGING)
         install(FILES
-                packaging/cmake/control/copyright
+                ${PKG_FILES_PATH}/copyright
                 COMPONENT plugin-go
                 DESTINATION usr/share/doc/netdata-plugin-go)
     endif()
