--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -333,6 +333,20 @@ check_include_file("sys/statvfs.h" HAVE_SYS_STATVFS_H)
 check_include_file("inttypes.h" HAVE_INTTYPES_H)
 check_include_file("stdint.h" HAVE_STDINT_H)
 check_include_file("sys/capability.h" HAVE_SYS_CAPABILITY_H)
+check_include_file("arpa/inet.h" HAVE_ARPA_INET_H)
+check_include_file(netinet/tcp.h HAVE_NETINET_TCP_H)
+check_include_file(sys/ioctl.h HAVE_SYS_IOCTL_H)
+check_include_file(grp.h HAVE_GRP_H)
+check_include_file(pwd.h HAVE_PWD_H)
+check_include_file(net/if.h HAVE_NET_IF_H)
+check_include_file(poll.h HAVE_POLL_H)
+check_include_file(syslog.h HAVE_SYSLOG_H)
+check_include_file(sys/mman.h HAVE_SYS_MMAN_H)
+check_include_file(sys/resource.h HAVE_SYS_RESOURCE_H)
+check_include_file(sys/socket.h HAVE_SYS_SOCKET_H)
+check_include_file(sys/wait.h HAVE_SYS_WAIT_H)
+check_include_file(sys/un.h HAVE_SYS_UN_H)
+check_include_file(spawn.h HAVE_SPAWN_H)
 
 #
 # check symbols
