--- a/packaging/cmake/config.cmake.h.in
+++ b/packaging/cmake/config.cmake.h.in
@@ -161,7 +161,14 @@
 #cmakedefine CONFIGURE_COMMAND "@CONFIGURE_COMMAND@"
 #cmakedefine NETDATA_USER "@NETDATA_USER@"
 
-#cmakedefine VERSION "@GIT_DESCRIBE_OUTPUT@"
+#define NETDATA_VERSION_MAJOR "@NETDATA_VERSION_MAJOR@"
+#define NETDATA_VERSION_MINOR "@NETDATA_VERSION_MINOR@"
+#define NETDATA_VERSION_PATCH "@NETDATA_VERSION_PATCH@"
+#define NETDATA_VERSION_TWEAK "@NETDATA_VERSION_TWEAK@"
+#define NETDATA_VERSION_DESCR "@NETDATA_VERSION_DESCR@"
+
+#define NETDATA_VERSION "@GIT_DESCRIBE_OUTPUT@"
+#define VERSION NETDATA_VERSION
 
 #define ENABLE_JSONC 1
 
