win_processes: Adjust code to run on Microsoft

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1273,6 +1273,7 @@ set(WINDOWS_PLUGIN_FILES
         src/collectors/windows.plugin/perflib-processor.c
         src/collectors/windows.plugin/perflib-network.c
         src/collectors/windows.plugin/perflib-memory.c
+        src/collectors/windows.plugin/perflib-processes.c
 )
 
 set(PROC_PLUGIN_FILES
