--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -564,7 +564,7 @@ endif()
 set(ENABLE_OPENSSL True)
 pkg_check_modules(TLS IMPORTED_TARGET openssl)
 
-if(NOT TARGET PkgConfig::OPENSSL)
+if(NOT TARGET PkgConfig::TLS)
         if(MACOS)
                 execute_process(COMMAND
                                 brew --prefix --installed openssl
