Always check for libcrypto if we found openssl.
If we fail to find libcrypto when we found openssl with
pkg_check_modules, then the openssl install is horribly broken and we
will see failures either at link time or at runtime, so there is no
point in not checking for it on macOS.

This also more clearly delineates that we _do_ require libcrypto
irrespective of the platform.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -589,11 +589,10 @@ if(NOT TARGET PkgConfig::TLS)
         else()
             message(FATAL_ERROR "OpenSSL (or LibreSSL) is required for building Netdata, but could not be found.")
         endif()
+else()
+        pkg_check_modules(CRYPTO IMPORTED_TARGET REQUIRED libcrypto)
 endif()
 
-if(NOT MACOS)
-        pkg_check_modules(CRYPTO IMPORTED_TARGET libcrypto)
-endif()
 
 #
 # figure out if we need protoc/protobuf
