--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1433,6 +1433,7 @@ elseif(OS_FREEBSD)
 elseif(OS_WINDOWS)
         list(APPEND NETDATA_FILES
                 src/daemon/static_threads_windows.c
+                src/daemon/winsvc.cc
                 ${WINDOWS_PLUGIN_FILES}
                 ${INTERNAL_COLLECTORS_FILES}
         )
