--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2576,10 +2576,13 @@ if(BUILD_FOR_PACKAGING)
                 ${CMAKE_BINARY_DIR}/system/systemd/netdata.service
                 COMPONENT netdata
                 DESTINATION lib/systemd/system)
+        install(DIRECTORY
+                COMPONENT netdata
+                DESTINATION lib/systemd/journald@netdata.conf.d
         install(FILES
                 system/systemd/journald@netdata.conf
                 COMPONENT netdata
-                DESTINATION lib/systemd/system)
+                DESTINATION lib/systemd/journald@netdata.conf.d/netdata.conf)
 endif()
 
 configure_file(system/systemd/netdata.service.v235.in system/systemd/netdata.service.v235 @ONLY)
