Add improved status messages.

--- a/packaging/repoconfig/CMakeLists.txt
+++ b/packaging/repoconfig/CMakeLists.txt
@@ -115,10 +115,13 @@ if(${DISTRO} IN_LIST DEB_DISTROS)
   require_command(GPG gpg)
 
   set(DIST_NAME ${DISTRO})
+  message(STATUS "Generating stable repository configuration for ${DISTRO} ${SUITE}")
   set(VARIANT stable)
   configure_file(netdata.list.in netdata.list @ONLY)
+  message(STATUS "Generating edge repository configuration for ${DISTRO} ${SUITE}")
   set(VARIANT edge)
   configure_file(netdata.list.in netdata-edge.list @ONLY)
+  message(STATUS "Preparing changelogs")
   set(PKG_NAME netdata-repo)
   file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/netdata-repo)
   configure_file(deb.changelog netdata-repo/changelog @ONLY)
@@ -220,8 +223,10 @@ elseif(${DISTRO} IN_LIST RPM_DISTROS)
     endif()
   endif()
 
+  message(STATUS "Generating stable repository configuration for ${DISTRO} ${DISTRO_VERSION}")
   set(VARIANT stable)
   configure_file(netdata.repo.${REPO_ID} netdata.repo @ONLY)
+  message(STATUS "Generating edge repository configuration for ${DISTRO} ${DISTRO_VERSION}")
   set(VARIANT edge)
   configure_file(netdata.repo.${REPO_ID} netdata-edge.repo @ONLY)
 
