Skip package signing on PRs.
It’s unlikely to work correctly, and has little to no value.

--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -312,13 +312,13 @@ jobs:
           ${{ needs.version-check.outputs.repo }}
       - name: Import GPG Keys
         id: import-keys
-        if: needs.file-check.outputs.run == 'true' && matrix.format == 'deb'
+        if: needs.file-check.outputs.run == 'true' && matrix.format == 'deb' && github.event_name != 'pull_request'
         uses: crazy-max/ghaction-import-gpg@v6
         with:
           gpg_private_key: ${{ secrets.NETDATABOT_PACKAGE_SIGNING_KEY }}
       - name: Sign DEB Packages
         id: sign-deb
-        if: needs.file-check.outputs.run == 'true' && matrix.format == 'deb'
+        if: needs.file-check.outputs.run == 'true' && matrix.format == 'deb' && github.event_name != 'pull_request'
         shell: bash
         run: /netdata/.github/scripts/deb-sign.sh artifacts Netdatabot
       - name: Upload to packages2.netdata.cloud
