--- a/.github/workflows/repoconfig-packages.yml
+++ b/.github/workflows/repoconfig-packages.yml
@@ -134,13 +134,13 @@ jobs:
           done
       - name: Import GPG Keys
         id: import-keys
-        if: matrix.format == 'deb'
+        if: matrix.format == 'deb' && github.event_name != 'pull_request'
         uses: crazy-max/ghaction-import-gpg@v6
         with:
           gpg_private_key: ${{ secrets.NETDATABOT_PACKAGE_SIGNING_KEY }}
       - name: Sign DEB Packages
         id: sign-deb
-        if: matrix.format == 'deb'
+        if: matrix.format == 'deb' && github.event_name != 'pull_request'
         shell: bash
         run: /netdata/.github/scripts/deb-sign.sh packaging/repoconfig/artifacts Netdatabot
       - name: Upload to packages2.netdata.cloud
